force-app/main/default/objects/Order_Staging__c/Order_Staging__c.object-meta.xml
<CustomObject>
    <label>Order Staging</label>
    <nameField>
        <displayFormat>OSN-{0000000}</displayFormat>
        <label>Order Staging Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>