force-app/main/default/objects/Order_Staging__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Order Stagings</relationshipLabel>
    <relationshipName>Order_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>