force-app/main/default/objects/Order_Staging__c/fields/Delete_Date__c.field-meta.xml
<CustomField>
    <fullName>Delete_Date__c</fullName>
    <label>Delete Date</label>
    <type>DateTime</type>
</CustomField>