force-app/main/default/objects/Order_Staging__c/fields/Delivery_Dates__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Dates__c</fullName>
    <label>Delivery Dates</label>
    <type>TextArea</type>
</CustomField>