force-app/main/default/objects/Order_Staging__c/fields/Order_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference_Number__c</fullName>
    <label>Order Reference Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>