force-app/main/default/objects/Order_Staging__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Order Stagings</relationshipLabel>
    <relationshipName>Order_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>